# Coppery

./: CMakeLists.txt  readme.md
aminc/: dataser.hpp  format.hpp  gbvfs.hpp  gbvfs_file.hpp  gridLine.hpp  hash.hpp  luawrap.hpp  quadtree.hpp  vector2.hpp
src/: argumentParser.hpp  color.hpp  compiler.cpp  compiler.hpp  config.cpp  config.hpp  dataserFile.cpp  dataserFile.hpp  elementMapper.hpp  fileHandleStream.cpp  fileHandleStream.hpp  fileOperations.cpp  fileOperations.hpp  fileStreambuf.cpp  fileStreambuf.hpp  fileWriterStreambuf.cpp  fileWriterStreambuf.hpp  formatString.cpp  log.cpp  log.hpp  main.cpp  mapObject.hpp  mapTransformer.hpp  matrix.cpp  matrix.hpp  oGL.hpp  reference.hpp  separatedFile.cpp  separatedFile.hpp  stringUtil.cpp  stringUtil.hpp  variable.cpp  variable.hpp
src/GHMAS/: binarystreambuilder.cpp  binarystreambuilder.h  contextpool.cpp  contextpool.h  coroutine.cpp  coroutine.h  entity.cpp  entity.h  random.cpp  random.h  stringutils.cpp  stringutils.h  thread.cpp  thread.h
src/control/: control.cpp  control.hpp  crossFunctional.hpp  dynamic.cpp  dynamic.hpp  dynamicShared.hpp
src/game/: broadPhase.cpp  broadPhase.hpp  collision.cpp  collision.hpp  collisionMap.cpp  engineDefs.hpp  game.cpp  game.hpp  gameMapSaving.hpp  mapCollisionInfo.hpp  pathfinding.cpp  pathfinding.hpp  physicsActorManager.cpp  physicsActorManager.hpp  tileDef.hpp  tilemap.cpp  tilemap.hpp  tilemapLoading.cpp  tilemapLoading.hpp
src/graphics/: characterAnimator.cpp  characterAnimator.hpp  configurableParticleSystem.cpp  configurableParticleSystem.hpp  drawable.cpp  (+37 more)
(+45 files in other folders)
